--- a/fussball.html
+++ b/fussball.html
@@ -38,16 +38,20 @@
       </div>
     </div>
   </nav>
+
+
+
+  <!-- carousel -->
+  
+  
   <main style="display: flex; justify-content: center;">
-  <div style="max-width: 600px;" id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+  <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" width="100%" height="100%">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
     </div>
 
-
-    <!-- carousel -->
     
     <div class="carousel-inner">
       <div class="carousel-item active">
