--- a/index.html
+++ b/index.html
@@ -10,23 +10,26 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Home</a>
+      <a class="navbar-brand" href="index.html">ZER0SP0RT</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
+
+      <!-- NAV BAR -->
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Fussball</a>
+            <a class="nav-link active" aria-current="page" href="fussball.html">Fussball</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Handball</a>
+            <a class="nav-link" href="handball.html">Handball</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Tennis</a>
+            <a class="nav-link" href="tennis.html">Tennis</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Basketball</a>
+            <a class="nav-link" href="basketball.html">Basketball</a>
           </li>
 
          
@@ -36,8 +39,13 @@
           <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
       </div>
+
+      <!-- NAV BAR FERTIG-->
     </div>
   </nav>
+
+
+    <!-- carousel -->
   <main style="display: flex; justify-content: center;">
   <div style="max-width: 600px;" id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
@@ -48,7 +56,7 @@
     
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="images/10.jpg" class="d-block w-100" alt="...">
+        <img src="images/" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
         <img src="images/2.jpg" class="d-block w-100" alt="...">
@@ -71,6 +79,8 @@
   </div>
 </main>
 
+
+<!-- SCHREIBE HIER DEIN TEXT :) -->
 <div class="px-4 py-5 my-5 text-center">
   <h1 class="display-2 fw text-warning">Last Sport News</h1>
 </div>
