--- a/fussball.html
+++ b/fussball.html
@@ -1,47 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-    <title>ZEROSPORT FOR SPORT</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-  </head>
-  
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">ZER0SP0RT</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-  
-        <!-- NAV BAR -->
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-  
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="fussball.html">Fussball</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="handball.html">Handball</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="tennis.html">Tennis</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="basketball.html">Basketball</a>
-            </li>
-  
-  
-          </ul>
-          <form class="d-flex">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-          </form>
-        </div>
+<head>
+  <title>A Sports Newletter</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="index.html">ZER0SP0RT</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <!-- NAV BAR -->
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="fussball.html">Fussball</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="handball.html">Handball</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="tennis.html">Tennis</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="basketball.html">Basketball</a>
+          </li>
+
+
+        </ul>
+        <form class="d-flex">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Suchen</button>
+        </form>
+      </div>
   
         <!-- NAV BAR FERTIG-->
       </div>
@@ -99,30 +99,13 @@
   <!-- body -->
 
   <div class="px-4 py-5 my-5 text-center">
-    <h1 class="display-2 fw text-warning">Last Sport News</h1>
+    <h1 class="display-2 fw text-warning">FUSSBALL</h1>
   </div>
 
   <div class="row row-cols-1 row-cols-md-3 g-4">
     <div class="col">
       <div class="card h-100">
-        <img src="images/7.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title"> Die Schweden sind Handball-Europameister</h5>
-          <p class="card-text">Schweden feiert das Ende seines Titelfluchs - und den Kieler Siegtorschützen Niclas
-            Ekberg. Die Geschichte des Corona-Rückkehrers passt zu einer verrückten EM.
-
-            Nach ihrem Gold-Coup von Budapest ließen Europas neue Handball-Könige ihren Tränen freien Lauf. "Als Kind
-            hätte ich mir nie träumen lassen, mit Schweden eine Goldmedaille zu gewinnen", sagte Torhüter Andreas
-            Palicka mit stockender Stimme. Der spektakuläre EM-Triumph und das Ende des 20 Jahre währenden Titelfluchs
-            hatte selbst Schwedens alles überragenden Team-Oldie emotional umgehauen.
-
-            .</p>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card h-100">
-        <img src="images/4.jpg" class="card-img-top" alt="...">
+        <img src="images/fussball-01.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Manuel Neuer fehlt dem FC Bayern mehrere Wochen lang
           </h5>
@@ -134,9 +117,12 @@
         </div>
       </div>
     </div>
+
+    <div class="b-example-divider"></div>
+
     <div class="col">
       <div class="card h-100">
-        <img src="images/5.jpg" class="card-img-top" alt="...">
+        <img src="images/fussball-02.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title"> Lucien Favre wurde Ende 2020 beim BVB gefeuert</h5>
           <p class="card-text"> Lucien Favre hat in einem Interview Verständnis für seine Entlassung bei Borussia
@@ -145,21 +131,7 @@
         </div>
       </div>
     </div>
-    <div class="col">
-      <div class="card h-100">
-        <img src="images/6.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Roger Federer hat eine Rückkehr auf den Tennis-Court noch nicht abgehakt
-          </h5>
-          <p class="card-text">"Ich habe das Gefühl, dass ich im April viel besser wissen werde, wo mein Körper steht",
-            sagte der 40-Jährige bei einem Sponsorentermin für Credit Suisse: "Ich denke also, dass ich diese Frage
-            besser im April oder Mai beantworten kann. Aber der Antrieb ist gerade auf jeden Fall da.".</p>
-        </div>
-      </div>
-    </div>
-  </div>
 
-  <div class="b-example-divider"></div>
 
   <div class="container-fluid text-center border-top bg-dark">
     <footer class="py-5">
@@ -202,7 +174,7 @@
         </ul>
       </div>
     </footer>
-
+  </div>
 </body>
 
 </html>
