--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>ZEROSPORT FOR SPORT</title>
+  <title>H0ME ZER0SP0RT</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -39,7 +39,7 @@
         </ul>
         <form class="d-flex">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
+          <button class="btn btn-outline-success" type="submit">Suchen</button>
         </form>
       </div>
 
@@ -50,7 +50,7 @@
 
   <!-- carousel -->
   <main style="display: flex; justify-content: center;">
-    <div style="max-width: 600px;" id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+    <div style="max-width" id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
           aria-current="true" aria-label="Slide 1"></button>
@@ -95,8 +95,9 @@
 
   <div class="row row-cols-1 row-cols-md-3 g-4">
     <div class="col">
+      <h2 class="streched-link text-center"><a href="handball.html">HANDBALL</a></h2>
       <div class="card h-100">
-        <img src="images/7.jpg" class="card-img-top" alt="...">
+        <img src="images/handball-01.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title"> Die Schweden sind Handball-Europameister</h5>
           <p class="card-text">Schweden feiert das Ende seines Titelfluchs - und den Kieler Siegtorschützen Niclas
@@ -105,15 +106,16 @@
             Nach ihrem Gold-Coup von Budapest ließen Europas neue Handball-Könige ihren Tränen freien Lauf. "Als Kind
             hätte ich mir nie träumen lassen, mit Schweden eine Goldmedaille zu gewinnen", sagte Torhüter Andreas
             Palicka mit stockender Stimme. Der spektakuläre EM-Triumph und das Ende des 20 Jahre währenden Titelfluchs
-            hatte selbst Schwedens alles überragenden Team-Oldie emotional umgehauen.
-
-            .</p>
+            hatte selbst Schwedens alles überragenden Team-Oldie emotional umgehauen.</p>
         </div>
       </div>
     </div>
+    <div class="b-example-divider"></div>
+
     <div class="col">
+      <h2 class="streched-link text-center"><a href="fussball.html">FUSSBALL</a></h2>
       <div class="card h-100">
-        <img src="images/4.jpg" class="card-img-top" alt="...">
+        <img src="images/fussball-01.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Manuel Neuer fehlt dem FC Bayern mehrere Wochen lang
           </h5>
@@ -125,9 +127,13 @@
         </div>
       </div>
     </div>
+
+    <div class="b-example-divider"></div>
+
     <div class="col">
+      <h2 class="streched-link text-center"><a href="fussball.html">FUSSBALL</a></h2>
       <div class="card h-100">
-        <img src="images/5.jpg" class="card-img-top" alt="...">
+        <img src="images/fussball-02.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title"> Lucien Favre wurde Ende 2020 beim BVB gefeuert</h5>
           <p class="card-text"> Lucien Favre hat in einem Interview Verständnis für seine Entlassung bei Borussia
@@ -136,9 +142,13 @@
         </div>
       </div>
     </div>
+
+    <div class="b-example-divider"></div>
+
     <div class="col">
+      <h2 class="streched-link text-center"><a href="tennis.html">TENNIS</a></h2>
       <div class="card h-100">
-        <img src="images/6.jpg" class="card-img-top" alt="...">
+        <img src="images/tennis-01.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Roger Federer hat eine Rückkehr auf den Tennis-Court noch nicht abgehakt
           </h5>
