--- a/handball.html
+++ b/handball.html
@@ -51,16 +51,16 @@
     
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="images/10.jpg" class="d-block w-100" alt="...">
+        <img src="images/banner-01.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="images/2.jpg" class="d-block w-100" alt="...">
+        <img src="images/banner-02.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="images/3.jpg" class="d-block w-100" alt="...">
+        <img src="images/banner-03.jpg" class="d-block w-100" alt="...">
       </div>
         <div class="carousel-item">
-          <img src="images/11.jpg" class="d-block w-100" alt="...">
+          <img src="images/banner-04.jpg" class="d-block w-100" alt="...">
         </div>
     </div>
 
@@ -88,7 +88,7 @@
   <div class="row row-cols-1 row-cols-md-3 g-4">
     <div class="col">
       <div class="card h-100">
-        <img src="images/7.jpg" class="card-img-top" alt="...">
+        <img src="images/handball-1.jpeg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title"> Die Schweden sind Handball-Europameister</h5>
           <p class="card-text">Schweden feiert das Ende seines Titelfluchs - und den Kieler Siegtorschützen Niclas Ekberg. Die Geschichte des Corona-Rückkehrers passt zu einer verrückten EM.
@@ -101,7 +101,7 @@
     </div>
     <div class="col">
       <div class="card h-100">
-        <img src="images/4.jpg" class="card-img-top" alt="...">
+        <img src="images/handball-2.jpeg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Manuel Neuer fehlt dem FC Bayern mehrere Wochen lang
           </h5>
@@ -113,7 +113,7 @@
     </div>
     <div class="col">
       <div class="card h-100">
-        <img src="images/5.jpg" class="card-img-top" alt="...">
+        <img src="images/handball-3.jpeg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title"> Lucien Favre wurde Ende 2020 beim BVB gefeuert</h5>
           <p class="card-text"> Lucien Favre hat in einem Interview Verständnis für seine Entlassung bei Borussia Dortmund vor gut einem Jahr gezeigt. Gegen einige Vorwürfe wehrte sich der Ex-BVB-Coach allerdings vehement.</p>
@@ -122,7 +122,7 @@
     </div>
     <div class="col">
       <div class="card h-100">
-        <img src="images/6.jpg" class="card-img-top" alt="...">
+        <img src="images/handball-4.jpeg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Roger Federer hat eine Rückkehr auf den Tennis-Court noch nicht abgehakt
           </h5>
